se creo funcion getOperation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div>
           
       <div class="calculadora">
-            <div id="pantalla"></div>
+            <div class="pantalla" id="pantalla"></div>
 
             <div>
               <button id="tecla6" type="button" class="btn btn-outline-primary tecla" data-numero="1">1</button>
@@ -40,7 +40,7 @@
             <div>
                 <button id="tecla" type="button" class="btn btn-outline-primary tecla" data-matematica="suma">+</button>
                 <button id="tecla1" type="button" class="btn btn-outline-primary tecla" data-matematica="resta">-</button>
-                <button id="tecla2" type="button" class="btn btn-outline-primary tecla" data-matematica="multi">X</button>
+                <button id="tecla2" type="button" class="btn btn-outline-primary tecla" data-matematica="multi">x</button>
                 <button id="tecla3" type="button" class="btn btn-outline-primary tecla" data-matematica="divide">/</button>
             </div>
             <div>
