Creo archivo calculadora.js y borro main.js

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <div>
           
       <div class="calculadora">
-            <div class="pantalla" id="pantalla"></div>
+            <div id="pantalla"></div>
 
+          <div id="teclas">
             <div>
               <button id="tecla6" type="button" class="btn btn-outline-primary tecla" data-numero="1">1</button>
               <button id="tecla7" type="button" class="btn btn-outline-primary tecla" data-numero="2">2</button>
@@ -47,13 +48,15 @@
               <button id="tecla4" type="button" class="btn btn-outline-primary tecla" data-operacion="limpiar">C</button>
               <button id="tecla5" type="button" class="btn btn-outline-primary tecla" data-operacion="igual">=</button>
             </div>
+          </div>  
       </div>
   
     
     </div>
 
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <!--<script src="js/bootstrap.min.js"></script>
+        <script src="js/main.js"></script>-->
+        <script src="js/calculadora.js"></script>
   </body>
 </html>
 
