--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-         <a class="navbar-brand" href="#">CALCULADORA</a>
+         <h1 class="navbar-brand">CALCULADORA</h1>
+         <h5>Orlando Manuel Ospino Hernandez</h5>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation" ><span class="navbar-toggler-icon"></span>
       </button>
 
